<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.MainActivity"
    tools:showIn="@layout/activity_main">


    <EditText
        android:id="@+id/num1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberSigned"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:hint=""/>

    <EditText
        android:id="@+id/num2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        style="?android:attr/buttonBarButtonStyle"
        >

        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/subtract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/subtract"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/multiply"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/divide"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="30sp"
        />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="#000000"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/num3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberSigned"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:hint="@string/rmb"/>
    <Button
        android:id="@+id/tran"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tran"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/tran_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tran_result"
        android:textSize="30sp"
        />
</LinearLayout>
